z-index problem fixed

--- a/css/songs.css
+++ b/css/songs.css
@@ -97,6 +97,7 @@ Author: pawlo1994
     opacity: 0;
     pointer-events: none;
     transform: scale(0.5);
+    z-index: 4;
 }
 
 .song--open {
